상태표시줄

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -7,13 +7,16 @@
 .topButton {
     margin-left: auto;
     height: 40px;
-
 }
 .mid {
     padding: 0 20px 0 20px;
     background: lightgreen;
 }
 .bot {
+    display: flex;
     padding: 0 20px 0 20px;
     background: lightcoral;
+}
+.botStatus {
+    margin-left: auto;
 }
