클래스형태에서 함수형으로 전환 작업중

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -13,14 +13,15 @@ p {
 }
 .mid {
     display: flex;
+    height: 400px;
 }
 .midLeft {
     background: lightgreen;
-    width: 50%;
+    width: 66%;
 }
 .midRight {
     background: lightslategray;
-    width: 50%;
+    width: 34%;
 }
 .bot {
     display: flex;
